test/simple/servicesNotInjected.yaml
# Client inside the cluster, not istio injected
apiVersion: v1
kind: Service
metadata:
  name: fortio-noistio
spec:
  ports:
  - port: 8080
    name: http-echo
  - port: 8079
    name: grpc-ping
  selector:
    app: fortio-noistio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raw-cli-deployement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio-noistio
  template:
    metadata:
      labels:
        app: fortio-noistio
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: fortio-noistio
        image: fortio/fortio
        imagePullPolicy: Always
